# pse_anemoi_custom_gate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  benchmark_results.md
examples/: optimized_timing_test.rs  simple_timing_test.rs  test.rs
reference/: anemoi.rs  merkle.rs
src/: anemoi_constants.rs  circuit_complete.rs  circuit_optimized.rs  lib.rs  utils.rs
